# linux-system-monitor

./: .gitignore  CMakeLists.txt  README.md
include/: monitor.hpp
src/: CPU.cpp  disk.cpp  gui.cpp  main.cpp  mem.cpp  network.cpp  options.cpp  process.cpp  system.cpp  tui.cpp  ui.cpp
